Version 0.1.1
===============
fixed purge disable
fixed init db in GUI
added save confirmation

Version 0.1.0
===============
GUI added

Version 0.0.3
===============
Service loop fix

Version 0.0.1
===============
Initial mod version