@@ -20,7 +20,9 @@
     
     <string id="31020">[I]Be careful this is a test version! [/I]</string>
  	<string id="31021">Default for TV shows (Careful!)</string>
-     
+    <string id="31022">Enable password</string>
+    <string id="31023">Password</string>
+    
     <!-- Conditions -->
     <string id="32001">[B]This section specifies the conditions that must be met before any files are deleted[/B]</string>
     <string id="32002">Only delete a video after a certain number of days after watching</string>
@@ -77,5 +79,6 @@
     <string id="304">Purge folder </string>
     <string id="305">Confirm Save</string>
     <string id="306">Are you sure you want to change the delete/keep lists?</string>
+    <string id="307">Enter password</string>
     <string id="999">fix me</string>
 </strings>
